# SPARTAN

./: .gitignore  README.md  adxl345.h  avionics.h  dataPacket.h  globals.h  l3gd20.h  sensors.h  tmp  todos.txt
.github/workflows/: cmake.yml
Electronics/: readme.md
Electronics/Current Sense Amplifier/: CSA.PcbLib  CSA.PrjPcb  CSA.SchDoc  CSA.SchLib
Electronics/Current Sense Amplifier/__Previews/: CSA.SchDocPreview
Electronics/Inertial Measurement Unit/: IMU.PcbLib  IMU.PrjPcb  IMU.SchDoc  IMU.SchLib
Electronics/Inertial Measurement Unit/__Previews/: IMU.SchDocPreview
Software/: CMakeLists.txt  Makefile  README.md  build.sh
Software/docs/: lsm6.md  mraa_i2c_notes.txt  todos.txt
Software/main/: CMakeLists.txt  main.cpp
Software/mock/: CMakeLists.txt  i2c.cpp  mraa_license.txt  spi.cpp  uart.cpp  uart.h
Software/old/sensors/: mdp.h  sensors.h
Software/old/sensors/adafruit_gps/: README.txt  adafruit_gps.cpp  adafruit_gps.h
Software/old/sensors/gps/: adafruit_gps.h  example.cpp  gps_pi.txt  gps_softwareserial_echotest.cpp
Software/old/sensors/lsm6ds33/: lsm6add.h  lsm6ds33.h  lsm6ds33_test  lsm6ds33_test.cpp
Software/spartan/: CMakeLists.txt
Software/spartan/src/: constants.h  globals.h
Software/spartan/src/data/: datapacket.cpp  datapacket.h  mdp.cpp  mdp.h
Software/spartan/src/docs/: dp.md  lsm6.md  sensor.md
Software/spartan/src/mock/: i2c.cpp  i2c.h  i2c_imu.h  spi.cpp  spi.h  spi_altimeter.h  types.h  uart.cpp  uart.h  uart_gps.h
Software/spartan/src/sensors/: adafruit_license.txt  ads1115.cpp  ads1115.h  dps422xtsa1.cpp  dps422xtsa1.h  lsm6ds33.cpp  lsm6ds33.h  mtk3339.cpp  mtk3339.h  sensor.cpp  sensor.h
Software/spartan/src/tests/: CMakeLists.txt
Software/spartan/src/utils/: utils.cpp  utils.h
Software/src/: CMakeLists.txt  globals.h
Software/src/datapacket/: datapacket.cpp  datapacket.h  decoder.cpp  decoder.h  mdp.cpp  mdp.h
Software/src/sensors/: ads1115.h  lsm6ds33.cpp  lsm6ds33.h  sensor.cpp  sensor.h
Software/src/utils/: utils.cpp
Software/tests/: CMakeLists.txt  lsm6ds33_test.cpp
Structures/: 91828A111_TYPE 18-8 STAINLESS STEEL HEX NUT.SLDPRT  92855A839_18-8 SS LOW-PROFILE SCKT HEAD SCREWS.SLDPRT  9600K810_SBR RUBBER PUSH-IN GROMMET.SLDPRT  Battery.SLDPRT  CDR Assembly wall.SLDPRT  M2.5x14_Standoff.SLDPRT  PerformanceLog.txt  backplane_004.SLDPRT  backwall.SLDPRT  ballast_002.SLDPRT  batpack_003.SLDPRT  board_004.SLDPRT  fort.12  fullassembly_008-Static 1.BD2  fullassembly_008-Static 1.BDF  fullassembly_008.SLDASM  rail_004.SLDPRT  readme.md  standoff_001.SLDPRT  tab_assembly.SLDASM  tabs (derived from rail).SLDPRT  top_004.SLDPRT  wall_004.SLDPRT
main/: main.cpp
notes/: mraa_i2c_notes.txt
old/sensors/adafruit_gps/: README.txt  gps_softwareserial_echotest.ino
old/sensors/lsm6ds33/: lsm6ds33_test  lsm6ds33_test.cpp
old/systems/: system.h
spartan/: CMakeLists.txt
spartan/src/data/: datapacket.cpp  datapacket.h
spartan/src/sensors/: ads1115.h  sensor.h  test.cpp  test.h
src/: dataPacket.h  globals.h
src/sensors/: README.txt  main.cpp  mdp.h  sensors.h
src/sensors/adafruit_gps/: gps_softwareserial_echotest.cpp
src/sensors/adxl345/: adxl345.h
src/sensors/dps422xtsa1/: 2q  Makefile  dps422xtsa1.h  dps_test  dps_test.cpp  rpi_out.txt
src/sensors/gps/: README.txt  adafruit_gps.cpp  example.cpp  gps.h  gps_softwareserial_echotest.ino
src/sensors/l3gd20/: README.txt
src/sensors/lsm6ds33/: Makefile  README.md  lsm6add.h  lsm6ds33.h  lsm6ds33_test  lsm6ds33_test.cpp
